# -*- coding: utf-8 -*-

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "dmr_analysis"
version = "1.0"
description = "Python pipeline for Differential Methylation Region (DMR) analysis"
authors = ["Junbai Wang <junbai@gmail.com>"]


[tool.poetry.dependencies]
    python = ">=3.8,<3.11"
    matplotlib = "3.5.3"
    numpy = "1.21.5"
    pandas="1.4.4"
    scikit_learn="1.2.2"
    scipy={version = "1.9.1", python = ">=3.8,<3.11"}
    setuptools="65.6.3"
    statsmodels="0.13.5"


[tool.poetry.scripts]
dmr_analysis = "dmr_analysis.dmr_analysis:main"

entry-points = '''
    [console_scripts]
    dmr_analysis = dmr_analysis.dmr_analysis:main
'''
[tool.flit.sdist]
include = [
    "dmr_analysis",
     "dmr_analysis.script",
     "dmr_analysis.script.script_high",
     "dmr_analysis.script.script_high.others",
    "README.md",
    "LICENSE"
]
exclude = ["final_demo_data",
"final_demo"]